--- a/templates/home.html
+++ b/templates/home.html
@@ -1,17 +1,61 @@
-<html>
-	<body>
-		<head>
-			<title>Crime Map</title>
-		</head>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<link type="text/css" rel="stylesheet" href="{{url_for('static', filename='css/style.css') }}" />
+		<script type="text/javascript"
+					src="https://maps.googleapis.com/maps/api/js">
+		</script>
 
-		<h1>Crime Map</h1>
-		<form action="/add" method="POST">
-			<input type="text" name="userinput">
-			<input type="submit" value="Doooo Eeeetttt!">
-		</form>
-		<a href="/clear">Are ya SURE?!</a>
-		{% for userinput in data %}
-		<p>{{userinput}}</p>
-		{% endfor %}
+		<script type="text/javascript">
+			var map;
+			var marker;
+			function initialize() {
+			var mapOptions = {
+        center: new google.maps.LatLng(45.525335927153336, -122.67728805541992),
+        zoom: 15
+      };	
+			map = new	google.maps.Map(document.getElementById("map-canvas"),mapOptions);
+			google.maps.event.addListener(map, 'click', function(event) {
+				placeMarker(event.latLng);
+			});
+			}
+
+			function placeMarker(location) {
+				if (marker) {
+					marker.setPosition(location);
+				} else {
+					marker = new google.maps.Marker({
+					position: location, map: map
+				});
+				}
+				document.getElementById('latitude').value = location.lat();
+				document.getElementById('longitude').value = location.lng();
+			}
+		</script>
+
+	</head>
+	<body onload="initialize()">
+		<h1>CrimeMap</h1>
+		<p>A map of recent criminal activity in the Portland area.</p>
+		<div id="map-canvas"></div>
+		<div id="newcrimeform">
+			<h2>Submit new crime</h2>
+			<form action="/submitcrime" method="POST">
+				<label for="category">What happened: </label>
+				<select name="category" id="category">
+					<option value="mugging">Mugging</option>
+					<option value="breakin">B & E</option>
+				</select>
+				<label for="date">When did it happen: </label>
+				<input name="date" id="date" type="date">
+				<label for="latitude">Lat: </label>
+				<input name="latitude" id="latitude" type="text">
+				<label for="longitude">Long: </label>
+				<input name="longitude" id="longitude" type="text">
+				<label for="description">How: </label>
+				<textarea name="description" id="description" placeholder="A brief accounting"></textarea>
+				<input type="submit" value="Preach!">
+			</form>
+		</div>
 	</body>
 </html>
