--- a/templates/home.html
+++ b/templates/home.html
@@ -53,18 +53,22 @@
 		<div id="map-canvas"></div>
 		<div id="newcrimeform">
 			<h2>Submit new crime</h2>
+			{% if error_message %}
+				<div id="error"><p>{{error_message}}</p></div>
+			{% endif %}
 			<form action="/submitcrime" method="POST">
 				<label for="category">What happened: </label>
 				<select name="category" id="category">
-					<option value="mugging">Mugging</option>
-					<option value="breakin">B & E</option>
+					{% for category in categories %}
+						<option value="{{category}}">{{category}}</option>
+					{% endfor %}
 				</select>
 				<label for="date">When did it happen: </label>
 				<input name="date" id="date" type="date">
 				<label for="latitude">Lat: </label>
-				<input name="latitude" id="latitude" type="text">
+				<input name="latitude" id="latitude" type="text" readonly>
 				<label for="longitude">Long: </label>
-				<input name="longitude" id="longitude" type="text">
+				<input name="longitude" id="longitude" type="text" readonly>
 				<label for="description">How: </label>
 				<textarea name="description" id="description" placeholder="A brief accounting"></textarea>
 				<input type="submit" value="Preach!">
